k8s/chogan-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chogan-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - path: /?(.*)
        pathType: Prefix
        backend:
          service:
            name: client-app-svc
            port:
              number: 80
      - pathType: Prefix
        path: /api/project/?(.*)
        backend:
          service:
            name: proj-service-svc
            port: 
              number: 8080
      - path: /api/user/?(.*)
        pathType: Prefix
        backend:
          service:
            name: user-service-svc
            port:
              number: 8080
